# qt-mpv-bg-wlr

./: .gitignore  Justfile  README.md  meson.build  meson_options.txt
include/: manager.h  mpvwidget.h  paperwidget.h
include/libmpv/common/: qthelper.hpp
src/: main.cpp  manager.cpp  mpvwidget.cpp  paperwidget.cpp  simple.cpp
